# assurance

./: .gitignore  Makefile  README.md  manage.py  mypy.ini  pyproject.toml
democrance_project/: asgi.py  settings.py  urls.py  wsgi.py
insurance/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  utils.py  views.py
insurance/migrations/: 0001_initial.py  0002_alter_policy_state_alter_policystatehistory_state.py
